Update 'vf7ft0p8l-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-9bf2b45cbc.yjai.p3.openshiftapps.com/rhtap/rhtap-qe:d5ac4a062e6a411b7e54a68d3b793fad595c7f4f@sha256:4f2095d16552b4dca78a16b740513cbcb8a67fbcae459c175c1bad4ca4f2fcb3

--- a/components/vf7ft0p8l-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/vf7ft0p8l-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vf7ft0p8l-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-9bf2b45cbc.yjai.p3.openshiftapps.com/rhtap/rhtap-qe:d5ac4a062e6a411b7e54a68d3b793fad595c7f4f@sha256:4f2095d16552b4dca78a16b740513cbcb8a67fbcae459c175c1bad4ca4f2fcb3
+          name: container-image
